--- a/src/components/PinPad/pinpad.css
+++ b/src/components/PinPad/pinpad.css
@@ -1,16 +1,29 @@
 .pinpad-container {
-  border: 1px solid black;
+  background-color: black;
   border-radius: 15px;
-  max-width: 330px;
-  height: 800px;
+  max-width: 321px;
+  height: 565px;
   display: flex;
-  padding: 47px;
+  padding-left: 33px;
+  padding-right: 33px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  margin: 10px;
+}
+
+.pinpad-container_header {
+  background-image: url("../../../public/sonar_header.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 230px;
+  height: 107px;
+  margin-bottom: 20px;
 }
 
 ul {
+  margin: 0;
   list-style: none;
   padding: 0;
   display: flex;
