--- a/src/components/Display/display.css
+++ b/src/components/Display/display.css
@@ -1,13 +1,14 @@
 .display {
   display: flex;
   border: 1px solid black;
-  width: 100%;
+  width: 241px;
   min-height: 55px;
   padding: 5px 0;
   border-radius: 15px;
+  margin-bottom: 20px;
   text-align: center;
   align-items: center;
   justify-content: center;
   font-size: 2rem;
-  background-color: rgba(128, 128, 128, 0.327);
+  background-color: rgb(162, 161, 161);
 }
